--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,6 +6,7 @@
   --color-body: #918ca4;
 }
 
+/* Typography */
 html {
   /* 62.5% of 16px = 10px */
   font-size: 62.5%;
@@ -35,22 +36,50 @@ h2 {
 h3 {
   font-size: 3rem;
 }
-p{
+p {
   margin-top: 0;
 }
 
-@media screen and (min-width: 1024px) { 
+@media screen and (min-width: 1024px) {
   body {
     font-family: Inter, Arial, Helvetica, sans-serif;
     font-size: 1.8rem;
- }
- h1{
-  font-size: 8rem;
- }
- h2{
-  font-size: 4rem;
- }
- h3{
-  font-size: 2.4rem;
- }
+  }
+  h1 {
+    font-size: 8rem;
+  }
+  h2 {
+    font-size: 4rem;
+  }
+  h3 {
+    font-size: 2.4rem;
+  }
+}
+
+/* links */
+a {
+  text-decoration: none;
+}
+
+.link-arrow {
+  color: var(--color-accent);
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.link-arrow::after {
+  content: "-->";
+  margin-left: 5px;
+  transition: margin 0.15s;
+}
+
+.link-arrow:hover::after {
+  margin-left: 10px;
+}
+
+@media screen and (min-width: 1024px) {
+  .link-arrow {
+    font-size: 1.5rem;
+  }
 }
